<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/b"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25dp"
            android:typeface="serif"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:foreground="@drawable/call1back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="60dp"
            android:gravity="center">

            <Button
                android:id="@+id/func1"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:fontFamily="serif"
                android:textSize="30dp"
                android:textColor="@color/colorAccent"
                android:text="@string/f3a" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/func2"
            style="@android:style/Widget.Material.Light.Button"
            android:fontFamily="serif"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"
            android:layout_width="320dp"
            android:layout_height="150dp"
            android:background="@drawable/card"
            android:text="@string/f3b" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>